@@ -1,7 +1,7 @@
 #ifndef ERROR_H
 #define ERROR_H
 
-extern void fatal_error( char *message, char *line );
+extern void fatal_error (const char *message, const char *line);
 extern char *argv0;
 
 #endif /* !ERROR_H */
